# SSEflags

./: LICENSE  README.md  make_readme.py  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
sseflags/: __init__.py  _lib.pyi  _lib.pyx  benchmark.py  test.py
